--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
     inputs:
       int_value:
-        description: "choose a number between 1 and 2"
+        description: "number passed from the worklow_dispatch"
         required: true
         type: string
 
