--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,4 +16,4 @@ jobs:
     steps:
       - name: print the enivronment that the user entered
         run: |
-          echo "the user has requested to work on ${inputs.environment} environment"
+          echo "the user has requested to work on ${{inputs.environment}} environment"
